--- a/app/views/orders/sberbank_invoice.html.erb
+++ b/app/views/orders/sberbank_invoice.html.erb
@@ -43,7 +43,8 @@ margin:3px 0 10px;}
         </td>
       </tr>
       <tr>
-        <td COLSPAN="3"><%= @order.ship_address.zipcode %>, г.&nbsp;<%= @order.ship_address.city %>, <%= [@order.ship_address.address1, @order.ship_address.address2].join %>
+        <td COLSPAN="3">
+          <%= "#{@order.ship_address.zipcode}, " if @order.ship_address.zipcode %>г.&nbsp;<%= @order.ship_address.city %>, <%= [@order.ship_address.address1, @order.ship_address.address2].join %>
         <div align="center" class="comment"><small>Адрес плательщика</small></div>
         </td>
       </tr>
