--- a/app/views/admin/orders/_juridical_tabs.html.erb
+++ b/app/views/admin/orders/_juridical_tabs.html.erb
@@ -1,4 +1,4 @@
-<% if @order.user.juridical? %>
+<% if @order.user.try(:juridical) %>
   <li<%== ' class="active"' if current == "Juridical Info" %>>
     <%= link_to t('juridical_info'), orders_juridical_info_path(@order) %>
   </li>
